tests/ui/mixup2.stderr
error[E0597]: `tag` does not live long enough
  --> $DIR/mixup2.rs:7:5
   |
7  |     mk_nano_arena!(b);
   |     ^^^^^^^^^^^^^^^^^^ borrowed value does not live long enough
...
11 | }
   | -
   | |
   | `tag` dropped here while still borrowed
   | borrow might be used here, when `_guard` is dropped and runs the `Drop` code for type `main::Guard`
   |
   = note: values in a scope are dropped in the opposite order they are defined
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
